# whiteout-survival-autopilot

./: .adr-dir  .gitignore  README.md  docker-compose.yml  go.mod  go.sum  note.md
.run/: autopilot.run.xml  giftCode.run.xml
cmd/autopilot/: autopilot.go  main.go
cmd/findImage/: findImage.go
cmd/giftCode/: giftCode.go  redeem_code.py  results.json
cmd/ocr/: ocr.go
cmd/waitText/: waitText.go
db/: devices.example.yaml  devices.yaml  giftCodes.example.yaml  giftCodes.yaml  state.example.yaml  state.yaml
docs/: adb.md
docs/curl/: ocr_full.sh
internal/adb/: adb.go  restart.go  settings.go
internal/analyzer/: analyzer.go  analyzer_benchmark_test.go  analyzer_exploration_test.go  analyzer_icon_saveAsRegion_test.go  analyzer_main_city_test.go  analyzer_saveAsRegion_test.go  analyzer_test.go  analyzer_text_alliance_tech_test.go  parse_time_duration.go
internal/app/: app.go  loop.go
internal/bot/: bot.go  update_state.go
internal/century/: api.go
internal/config/: analyze.go  analyze_rules.go  arealoader.go  cel_textcompare.go  devices.go  flatten.go  func_isMaxBinding.go  func_isMin.go  func_textcompare.go  state.go  (+7 more)
internal/gift/: listener.go  pyproject.toml  redeemer.go  twitter_rewards.go  wos_rewords.go
mydata/: label_studio.sqlite3
ocr/: Dockerfile  pyproject.toml  screenshot_ocr_service.py  test.go
ops/: config.alloy
references/: analyze.yaml  area.json  fsmState.yaml  heroes.yaml
test/: main.go
usecases/: alliance_upgrade_tech.yaml  allience_help.yaml  claim_exploration_rewards.yaml  exploration_battle.yaml  read_claim_mail.yaml
(+204 files in other folders)
