[project]
name = "giftcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.4.26",
    "charset-normalizer>=3.4.1",
    "ddddocr>=1.5.6",
    "idna>=3.10",
    "requests>=2.32.3",
    "urllib3>=2.4.0",
]
